# pharma-autobot

./: README.md  healthwarnings.py  hello.py  main.py  pyproject.toml  requirements.txt  writeup.md
public/: Animation - 1741371782486.lottie  Animation - Order.json
src/: app.py  app_alt.py  dummydata.py  exceptions.py  ocr.py  prompts.py  schema.py  whatsapp_order.py
templates/: base.html  index.html  prescription.html
