[project]
name = "pharma-autobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.2.0",
    "streamlit-lottie>=0.0.5",
    "streamlit>=1.42.2",
    "fastapi[standard]>=0.115.11",
]
